save and update returns Entity. fix model jsonSerialize method. fix request filter for update.
